--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ****************** Other ******************* #
-
+script/results/*
 *.pyc
 # Folder with the projects that we use as case studies
 projects/*
