add script to verify behavior of libs and clients

--- a/script/Dockerfile
+++ b/script/Dockerfile
@@ -27,6 +27,7 @@ COPY jdbl.py jdbl.py
 COPY main.py main.py
 COPY compile.py compile.py
 COPY usage.py usage.py
+COPY verify.py verify.py
 COPY core core
 
 
