--- a/revision/coverage_examples/pom.xml
+++ b/revision/coverage_examples/pom.xml
@@ -24,6 +24,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.8.0</version>
+    </dependency>
   </dependencies>
 
   <build>
